[project]
name = "pygments-cl-repl"

version = "0.2.1"

description = "Pygments lexer for Common Lisp REPL"

authors = [
  { name = "Russell Sim", email = "rsl@simopolis.xyz" }
]

readme = "README.rst"
requires-python = ">=3.7"
license = { text = "GPL-3.0-or-later" }

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: Django",
    "Programming Language :: Python :: 3",
]
dependencies = [
    'pygments',
]

[project.urls]
source = "https://git.sr.ht/~rsl/pygments-cl-repl"
tracker = "https://todo.sr.ht/~rsl/sphinxcontrib-cldomain"

[project.entry-points."pygments.lexers"]
common-lisp-repl = "pygments_cl_repl:CommonLispREPLLexer"

[build-system]
requires = ["setuptools>=43.0.0"]
build-backend = "setuptools.build_meta"

